add picture pinwheel

--- a/index.html
+++ b/index.html
@@ -160,6 +160,38 @@
         </p>
     </div>
 
+    <div id="foto1" class="step img-slide" data-x="3000" data-y="3000">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto2" class="step img-slide" data-x="4061" data-y="3439" data-rotate="45">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto3" class="step img-slide" data-x="4500" data-y="4500" data-rotate="90">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto4" class="step img-slide" data-x="4061" data-y="5561" data-rotate="135">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto5" class="step img-slide" data-x="3000" data-y="6000" data-rotate="180">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto6" class="step img-slide" data-x="1939" data-y="5561" data-rotate="225">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto7" class="step img-slide" data-x="1500" data-y="4500" data-rotate="270">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
+    <div id="foto8" class="step img-slide" data-x="1939" data-y="3439" data-rotate="315">
+      <img src="img/testpic.jpg" alt="test" width="900" />
+    </div>
+
     <div id="overview" class="step" data-x="7500" data-y="6000" data-scale="20">
     </div>
 </div>
