--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 -->
 <div id="impress">
     <!-- Teaser -->
-    <div id="title" class="step title" data-x="-500" data-y="0">
+    <div id="title" class="step title" data-x="0" data-y="0">
         <h1>Fachschaftsrat Elektrotechnik</h1>
         <p>
             Einführungswoche 2015<br />
@@ -160,6 +160,80 @@
         </p>
     </div>
 
+    <div id="ablaufplan-title" class="step title" data-x="6000" data-y="0">
+        <h1>Ablauf der Erstie-Woche</h1>
+    </div>
+
+    <div id="ablaufplan-montag" class="step slide" data-x="7000" data-y="0">
+        <h2>Montag, 05.10.2015</h2>
+        <q>
+            <b>11:00 - 12:00 Uhr:</b>
+            Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring <br/>
+            <b>Danach:</b>
+            gemeinsames Grillen mit dem Fachschaftsrat <b>(Freibier!!!)</b>
+        </q>
+    </div>
+
+    <div id="ablaufplan-dienstag" class="step slide" data-x="8000" data-y="0">
+        <h2>Dienstag, 06.10.2015</h2>
+        <q>
+            <b>Ab 9 Uhr:</b>
+            zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR im Raum...<br/>
+            <b>Ab 19 Uhr:</b>
+            Livemusik auf dem Ulmencampus
+        </q>
+    </div>
+
+    <div id="ablaufplan-mittwoch" class="step slide" data-x="9000" data-y="0">
+        <h2>Mittwoch, 07.10.2015</h2>
+        <q>
+            <b>Erstie-Rallye</b><br/>
+            <ul>
+              <li>Start: 14:00 Uhr</li>
+              <li>Treffpunkt: Albert-Einstein-Str. 2</li>
+              <li>Kennenlernen der Räume und Standorte</li>
+              <li>Am Ziel erwarten euch tolle Preise</li>
+            </ul>
+        </q>
+    </div>
+
+    <div id="ablaufplan-donnerstag-mentoring" class="step slide" data-x="10000" data-y="0">
+        <h2>Donnerstag, 08.10.2015</h2>
+        <q>
+            <b>Erstes Mentoring-Treffen</b><br/>
+            <ul>
+              <li>14:00 Uhr</li>
+              <li>Treffpunkt: Albert-Einstein-Str. 2</li>
+              <li>Raum: Ex04</li>
+            </ul>
+        </q>
+    </div>
+
+    <div id="ablaufplan-donnerstag-kneipentour" class="step slide" data-x="10000" data-y="800">
+        <h2>Donnerstag, 08.10.2015</h2>
+        <q>
+            <b>Kneipentour durch Rostock</b><br/>
+            <ul>
+              <li>19:00 Uhr</li>
+              <li>Treffpunkt: Ulmenstraße 69, vor dem Audimax</li>
+              <li>Anmeldung bitte an <a href="mailto:fachschaft.e-technik@uni-rostock.de">fachschaft.e-technik@uni-rostock.de</a></li>
+            </ul>
+        </q>
+    </div>
+
+    <div id="ablaufplan-freitag" class="step slide" data-x="11000" data-y="800">
+        <h2>Freitag, 09.10.2015</h2>
+        <q>
+            <b>Vortrag der Bibliothek</b><br/>
+            <ul>
+              <li>9:00 Uhr</li>
+              <li>Treffpunkt: Albert-Einstein-Str. 22, HS 037</li>
+              <li>Informationen über Nutzungsmöglichkeiten der Bibliotheken</li>
+            </ul>
+        </q>
+    </div>
+
+    <!-- Tino's Fotokreisel -->
     <div id="foto1" class="step img-slide" data-x="3000" data-y="3000">
       <img src="img/testpic.jpg" alt="test" width="900" />
     </div>
