--- a/index.html
+++ b/index.html
@@ -160,6 +160,63 @@
         </p>
     </div>
 
+    <!-- Vorstellung des Mentoring -->
+    <div id="mentoring-title" class="step title" data-x="6000" data-y="1600">
+      <h1>Mentoring</h1>
+    </div>
+
+    <div id="mentoring-erklaerung" class="step slide" data-x="7000" data-y="1600">
+      <h2>Was ist Mentoring?</h2>
+      <q>
+        <ul>
+          <li>Unterstützung bei: Studienorganisation, Einleben am Studienstandort, Hilfe bei Fragen und Problemen im Bezug auf das Studium</li>
+          <li>Mentoren sind Studenten aus den höheren Semestern</li>
+          <li>Teilnahme ist freiwillig</li>
+        </ul>
+      </q>
+    </div>
+
+    <div id="mentoring-nutzen" class="step slide" data-x="8000" data-y="1600">
+      <h2>Nutzen des Mentoring</h2>
+      <q>
+        <ul>
+          <li>Erleichterung des Übergangs von der Schule oder Arbeit ins Studium</li>
+          <li>Kontakte zu Studenten höherer Semester knüpfen</li>
+          <li>akute Probleme können über die Mentoren an die Lehrkräfte weitergeleitet werden</li>
+        </ul>
+      </q>
+    </div>
+
+    <div id="mentoring-inhalte" class="step slide" data-x="9000" data-y="1600">
+      <h2>Inhalte des Mentoring</h2>
+      <q>
+        <ul>
+          <li>Fragen rund ums Studium</li>
+          <li>Vorstellung der wichtigsten Online-Plattformen</li>
+          <li>Tipps zu Hausaufgaben und Lernstrategien</li>
+          <li>Zeitmanagement und Selbstorganisation</li>
+          <li>Hinweise zu den Prüfungen</li>
+        </ul>
+      </q>
+    </div>
+
+    <div id="mentoring-aber" class="step title" data-x="9000" data-y="3300" data-scale=4 data-rotate="90">
+      <h1>Die genauen Inhalte bestimmt ihr!!!</h1>
+    </div>
+
+    <div id="mentoring-organisation" class="step slide" data-x="7000" data-y="3300" data-rotate="90">
+      <h2>Organisation des Mentoring</h2>
+      <q>
+        <ul>
+          <li>4 Gruppen mit je 2 Mentoren</li>
+          <li>Häufigkeit der Treffen und Termine werden in den Gruppen bestimmt</li>
+          <li>Kennenlernen der Mentoren nachher beim Grillen</li>
+          <li>Eintragung in die Gruppen beim ersten Treffen am Donnerstag</li>
+        </ul>
+      </q>
+    </div>
+    
+    <!-- Ablaufplan der Einführungswoche -->
     <div id="ablaufplan-title" class="step title" data-x="6000" data-y="0">
         <h1>Ablauf der Erstie-Woche</h1>
     </div>
