--- a/index.html
+++ b/index.html
@@ -1,68 +1,5 @@
 <!doctype html>
 
-<!--
-
-    Welcome to the light side of the source, young padawan.
-
-    One step closer to learn something interesting you are...
-
-                               ____
-                            _.' :  `._
-                        .-.'`.  ;   .'`.-.
-               __      / : ___\ ;  /___ ; \      __
-             ,'_ ""--.:__;".-.";: :".-.":__;.--"" _`,
-             :' `.t""--.. '<@.`;_  ',@:` ..--""j.' `;
-                  `:-.._J '-.-'L__ `-- ' L_..-;'
-                    "-.__ ;  .-"  "-.  : __.-"
-                        L ' /.------.\ ' J
-                         "-.   "--"   .-"
-                        __.l"-:_JL_;-";.__
-                     .-j/'.;  ;""""  / .'\"-.
-                   .' /:`. "-.:     .-" .';  `.
-                .-"  / ;  "-. "-..-" .-"  :    "-.
-             .+"-.  : :      "-.__.-"      ;-._   \
-             ; \  `.; ;                    : : "+. ;
-             :  ;   ; ;                    : ;  : \:
-             ;  :   ; :                    ;:   ;  :
-            : \  ;  :  ;                  : ;  /  ::
-            ;  ; :   ; :                  ;   :   ;:
-            :  :  ;  :  ;                : :  ;  : ;
-            ;\    :   ; :                ; ;     ; ;
-            : `."-;   :  ;              :  ;    /  ;
-             ;    -:   ; :              ;  : .-"   :
-             :\     \  :  ;            : \.-"      :
-              ;`.    \  ; :            ;.'_..--  / ;
-              :  "-.  "-:  ;          :/."      .'  :
-               \         \ :          ;/  __        :
-                \       .-`.\        /t-""  ":-+.   :
-                 `.  .-"    `l    __/ /`. :  ; ; \  ;
-                   \   .-" .-"-.-"  .' .'j \  /   ;/
-                    \ / .-"   /.     .'.' ;_:'    ;
-                     :-""-.`./-.'     /    `.___.'
-                           \ `t  ._  /
-                            "-.t-._:'
-
--->
-
-<!--
-
-    So you'd like to know how to use impress.js?
-
-    You've made the first, very important step -- you're reading the source code.
-    And that's how impress.js presentations are built -- with HTML and CSS code.
-
-    Believe me, you need quite decent HTML and CSS skills to be able to use impress.js effectively.
-    And what is even more important, you need to be a designer, too, because there are no default
-    styles for impress.js presentations, there is no default or automatic layout for them.
-
-    You need to design and build it by hand.
-
-    So...
-
-    Would you still like to know how to use impress.js?
-
--->
-
 <html lang="de">
 <head>
     <meta charset="utf-8" />
@@ -74,21 +11,7 @@
     <meta name="author" content="Tino Steinmetz" />
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic|Oswald:700" rel="stylesheet" />
-    <!--
-
-        Impress.js doesn't depend on any external stylesheet. Script adds all styles it needs for
-        presentation to work.
-
-        This style below contains styles only for demo presentation. Browse it to see how impress.js
-        classes are used to style presentation steps, or how to apply fallback styles, but I don't want
-        you to use them directly in your presentation.
-
-        Be creative, build your own. We don't really want all impress.js presentations to look the same,
-        do we?
-
-        When creating your own presentation get rid of this file. Start from scratch, it's fun!
-
-    -->
+    
 <!--    <link href="css/impress-demo.css" rel="stylesheet" />-->
     <link href="css/base.css" rel="stylesheet" />
     <link href="css/theme.css" rel="stylesheet" />
@@ -133,25 +56,9 @@
 
     Now that's the core element used by impress.js.
 
-    That's the wrapper for your presentation steps. In this element all the impress.js magic happens.
-    It doesn't have to be a `<div>`. Only `id` is important here as that's how the script find it.
-
-    You probably won't need it now, but there are some configuration options that can be set on this element.
-
-    To change the duration of the transition between slides use `data-transition-duration="2000"` giving it
-    a number of ms. It defaults to 1000 (1s).
-
-    You can also control the perspective with `data-perspective="500"` giving it a number of pixels.
-    It defaults to 1000. You can set it to 0 if you don't want any 3D effects.
-    If you are willing to change this value make sure you understand how CSS perspective works:
-    https://developer.mozilla.org/en/CSS/perspective
-
-    But as I said, you won't need it for now, so don't worry - there are some simple but interesing things
-    right around the corner of this tag ;)
-
 -->
 <div id="impress">
-    <!-- Teaser -->
+    <!-- Titelseite -->
     <div id="title" class="step title" data-x="0" data-y="0">
         <h1>Fachschaftsrat Elektrotechnik</h1>
         <p>
