Abschnitt Fachschaft hinzugefügt

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Tino Steinmetz" />
 
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:regular,semibold,italic,italicsemibold|PT+Sans:400,700,400italic,700italic|PT+Serif:400,700,400italic,700italic|Oswald:700" rel="stylesheet" />
-    
+
 <!--    <link href="css/impress-demo.css" rel="stylesheet" />-->
     <link href="css/base.css" rel="stylesheet" />
     <link href="css/theme.css" rel="stylesheet" />
@@ -66,12 +66,25 @@
             Universität Rostock<br />
         </p>
     </div>
-
-    <!-- Vorstellung des Mentoring -->
-    <div id="mentoring-title" class="step title" data-x="6000" data-y="1600">
-      <h1>Mentoring</h1>
+    <!-- Fachschaft und Fachschaftsrat -->
+    <div id="fachschaft-frage" class="step title" data-x="0" data-y="800">
+      <h1>Was ist die Fachschaft?</h1>
     </div>
-
+    <div id="fachschaft-erklaerung" class="step title" data-x="0" data-y="1600">
+      <h2>Gesamtheit aller Studierenden eines Fachbereiches</h2>
+    </div>
+    <div id="studiengaenge" class="step slide" data-x="1000" data-y="1600">
+      <h2>Studiengänge</h2>
+      <q>
+        <ul>
+          <li>Elektrotechnik</li>
+          <li>Informationstechnik/ Technische Informatik</li>
+          <li>Computational Science an Engineering</li>
+          <li>Electical Engineering</li>
+        </ul>
+      </q>
+    </div>
+    <!-- Mentoring -->
     <div id="mentoring-erklaerung" class="step slide" data-x="7000" data-y="1600">
       <h2>Was ist Mentoring?</h2>
       <q>
