Abschnitt über Fachschaftsrat hinzugefügt

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
             Universität Rostock<br />
         </p>
     </div>
-    <!-- Fachschaft und Fachschaftsrat -->
+
+    <!-- Fachschaft -->
     <div id="fachschaft-frage" class="step title" data-x="0" data-y="800">
       <h1>Was ist die Fachschaft?</h1>
     </div>
@@ -81,6 +82,44 @@
           <li>Informationstechnik/ Technische Informatik</li>
           <li>Computational Science an Engineering</li>
           <li>Electical Engineering</li>
+        </ul>
+      </q>
+    </div>
+
+    <!-- Fachschaftsrat -->
+    <div id="fachschaftsrat" class="step title" data-x="1000" data-y="0">
+      <h1>Der Fachschaftsrat</h1>
+    </div>
+    <div id="fachschaftsrat-erklaerung" class="step slide" data-x="2000" data-y="0">
+      <h2>Was ist der Fachschaftsrat</h2>
+      <q>
+        <ul>
+          <li>Vertretung der Fachschaft</li>
+          <li>Besteht aus Studenten der Fachschaft</li>
+          <li>Wahl im Wintersemester</li>
+          <li>Unabhängig von AStA und Faultät</li>
+          <li><b>DER</b> Ansprechpartner aller Art</li>
+        </ul>
+      </q>
+    </div>
+    <div id="fachschaftsrat-aufgaben" class="step slide" data-x="3000" data-y="0">
+      <h2>Aufgaben des Fachschaftsrates</h2>
+      <q>
+        <ul>
+          <li>Vertreten der fachlichen Belange der Fachschaft</li>
+          <li>Wahrung der kulturellen und sozialen Belange der Fachschaft <b>(Party)</b></li>
+          <li>Nimmt Einfluss auf akademische Selbstverwaltung</li>
+        </ul>
+      </q>
+    </div>
+    <div id="fachschaftsrat-kontakt" class="step slide" data-x="4000" data-y="0">
+      <h2>Kontakt zum Fachschaftsrat</h2>
+      <q>
+        <ul>
+          <li>Sprecht uns direkt an!</li>
+          <li>EMail: <br/><a href="mailto:fachschaft.e-technik@uni-rostock.de">fachschaft.e-technik@uni-rostock.de</a></li>
+          <li>Homepage: <br/><a href="http://fsr.e-technik.uni-rostock.de">fsr.e-technik.uni-rostock.de</a></li>
+          <li>Facebook: <a href="https://www.facebook.com/FSR.ET.HRO">FSR.ET.HRO</a></li>
         </ul>
       </q>
     </div>
