--- a/index.html
+++ b/index.html
@@ -124,6 +124,9 @@
       </q>
     </div>
     <!-- Mentoring -->
+    <div id="mentoring" class="step title" data-x="6000" data-y="1600">
+      <h1>Mentoring</h1>
+    </div>
     <div id="mentoring-erklaerung" class="step slide" data-x="7000" data-y="1600">
       <h2>Was ist Mentoring?</h2>
       <q>
