Anpassung für Multislides

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-donnerstag-mentoring" class="step slide" data-x="10000" data-y="0">
+    <div id="ablaufplan-donnerstag-mentoring" class="step slide multi" data-x="10000" data-y="0">
       <h2>Donnerstag, 08.10.2015</h2>
       <q>
         <b>Erstes Mentoring-Treffen</b>
@@ -240,7 +240,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-donnerstag-kneipentour" class="step slide" data-x="10000" data-y="800">
+    <div id="ablaufplan-donnerstag-kneipentour" class="step slide multi" data-x="10000" data-y="0">
       <h2>Donnerstag, 08.10.2015</h2>
       <q>
         <b>Kneipentour durch Rostock</b>
@@ -253,7 +253,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-freitag" class="step slide" data-x="11000" data-y="800">
+    <div id="ablaufplan-freitag" class="step slide" data-x="11000" data-y="0">
       <h2>Freitag, 09.10.2015</h2>
       <q>
         <b>Vortrag der Bibliothek</b>
