Neuaufteilung, Platz für Wohnsitzprämie gelassen, Noob-Bild hinzugefügt

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 -->
   <div id="impress">
     <!-- Titelseite -->
-    <div id="title" class="step title" data-x="5000" data-y="3500" data-scale="5">
+    <div id="title" class="step title" data-x="5000" data-y="4000" data-scale="5">
       <h1>Fachschaftsrat Elektrotechnik</h1>
       <p>
         Einführungswoche 2015
@@ -71,15 +71,15 @@
     </div>
 
     <!-- Fachschaft -->
-    <div id="fachschaft-frage" class="step title" data-x="9500" data-y="2000" data-scale="3">
+    <div id="fachschaft-frage" class="step title" data-x="5000" data-y="1500" data-scale="3">
       <h1>Was ist die Fachschaft?</h1>
     </div>
 
-    <div id="fachschaft-erklaerung" class="step title" data-x="8500" data-y="1000">
+    <div id="fachschaft-erklaerung" class="step title" data-x="5500" data-y="0">
       <h2>Gesamtheit aller Studierenden eines Fachbereiches</h2>
     </div>
 
-    <div id="studiengaenge" class="step slide" data-x="7500" data-y="0">
+    <div id="studiengaenge" class="step slide" data-x="4500" data-y="0">
       <h2>Studiengänge</h2>
       <q>
         <ul>
@@ -96,7 +96,7 @@
       <h1>Der Fachschaftsrat</h1>
     </div>
 
-    <div id="fachschaftsrat-erklaerung" class="step slide" data-x="-700" data-y="1500">
+    <div id="fachschaftsrat-erklaerung" class="step slide" data-x="-1000" data-y="1500">
       <h2>Was ist der Fachschaftsrat</h2>
       <q>
         <ul>
@@ -109,7 +109,7 @@
       </q>
     </div>
 
-    <div id="fachschaftsrat-aufgaben" class="step slide" data-x="300" data-y="1500">
+    <div id="fachschaftsrat-aufgaben" class="step slide" data-x="0" data-y="1500">
       <h2>Aufgaben des Fachschaftsrates</h2>
       <q>
         <ul>
@@ -120,7 +120,7 @@
       </q>
     </div>
 
-    <div id="fachschaftsrat-kontakt" class="step slide" data-x="1300" data-y="1500">
+    <div id="fachschaftsrat-kontakt" class="step slide" data-x="1000" data-y="1500">
       <h2>Kontakt zum Fachschaftsrat</h2>
       <q>
         <ul>
@@ -134,16 +134,16 @@
       </q>
     </div>
 
-    <div id="fsr-foto" class="step img-slide" data-x="2300" data-y="1500">
+    <div id="fsr-foto" class="step img-slide" data-x="0" data-y="3000" data-scale=2>
       <img src="img/Gruppenfoto_FSR_ET.jpg" alt="FSR bei Raumfeld" width="900" />
     </div>
 
     <!-- Mentoring -->
-    <div id="mentoring" class="step title" data-x="0" data-y="4000" data-scale="3">
+    <div id="mentoring" class="step title" data-x="0" data-y="5000" data-scale="3">
       <h1>Mentoring</h1>
     </div>
 
-    <div id="mentoring-erklaerung" class="step slide" data-x="-700" data-y="5500">
+    <div id="mentoring-erklaerung" class="step slide" data-x="-1000" data-y="6500">
       <h2>Was ist Mentoring?</h2>
       <q>
         <ul>
@@ -154,7 +154,7 @@
       </q>
     </div>
 
-    <div id="mentoring-nutzen" class="step slide" data-x="-700" data-y="6300">
+    <div id="mentoring-nutzen" class="step slide" data-x="-1000" data-y="7300">
       <h2>Nutzen des Mentoring</h2>
       <q>
         <ul>
@@ -165,7 +165,11 @@
       </q>
     </div>
 
-    <div id="mentoring-inhalte" class="step slide" data-x="-700" data-y="7100">
+    <div id="noob" class="step img-slide" data-x="0" data-y="7300" data-scale=1>
+      <img src="img/military-humor-soldier-russia-listen-here-noob-meme.jpg" alt="NOOB" width="900" />
+    </div>
+
+    <div id="mentoring-inhalte" class="step slide" data-x="-1000" data-y="8100">
       <h2>Inhalte des Mentoring</h2>
       <q>
         <ul>
@@ -178,11 +182,11 @@
       </q>
     </div>
 
-    <div id="mentoring-aber" class="step title" data-x="1500" data-y="6300" data-scale=3.5 data-rotate="-90">
+    <div id="mentoring-aber" class="step title" data-x="2000" data-y="7300" data-scale=3 data-rotate="-90">
       <h1>Die genauen Inhalte bestimmt ihr!!!</h1>
     </div>
 
-    <div id="mentoring-organisation" class="step slide" data-x="3500" data-y="6300" data-rotate="-90">
+    <div id="mentoring-organisation" class="step slide" data-x="4000" data-y="7300" data-rotate="-90">
       <h2>Organisation des Mentoring</h2>
       <q>
         <ul>
@@ -195,11 +199,11 @@
     </div>
 
     <!-- Ablaufplan der Einführungswoche -->
-    <div id="ablaufplan-title" class="step title" data-x="8000" data-y="6300" data-scale="3">
+    <div id="ablaufplan-title" class="step title" data-x="9000" data-y="0" data-scale="3">
       <h1>Ablauf der Erstie-Woche</h1>
     </div>
 
-    <div id="ablaufplan-montag" class="step slide" data-x="10000" data-y="7100" data-z="1000">
+    <div id="ablaufplan-montag" class="step slide" data-x="8000" data-y="1500">
       <h2>Montag, 05.10.2015</h2>
       <q>
         <b>11:00 - 12:00 Uhr:</b> Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring
@@ -208,7 +212,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-dienstag" class="step slide" data-x="10000" data-y="6300" data-z="1000">
+    <div id="ablaufplan-dienstag" class="step slide" data-x="9000" data-y="1500">
       <h2>Dienstag, 06.10.2015</h2>
       <q>
         <b>Ab 9 Uhr:</b> zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR im Raum...
@@ -217,7 +221,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-mittwoch" class="step slide" data-x="10000" data-y="5500" data-z="1000">
+    <div id="ablaufplan-mittwoch" class="step slide" data-x="10000" data-y="1500">
       <h2>Mittwoch, 07.10.2015</h2>
       <q>
         <b>Erstie-Rallye</b>
@@ -231,7 +235,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-donnerstag-mentoring" class="step slide multi" data-x="10000" data-y="4700" data-z="1000">
+    <div id="ablaufplan-donnerstag-mentoring" class="step slide multi" data-x="10000" data-y="2300">
       <h2>Donnerstag, 08.10.2015</h2>
       <q>
         <b>Erstes Mentoring-Treffen</b>
@@ -244,7 +248,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-donnerstag-kneipentour" class="step slide multi" data-x="10000" data-y="4700" data-z="1000">
+    <div id="ablaufplan-donnerstag-kneipentour" class="step slide multi" data-x="10000" data-y="2300">
       <h2>Donnerstag, 08.10.2015</h2>
       <q>
         <b>Kneipentour durch Rostock</b>
@@ -257,7 +261,7 @@
       </q>
     </div>
 
-    <div id="ablaufplan-freitag" class="step slide" data-x="10000" data-y="3900" data-z="1000">
+    <div id="ablaufplan-freitag" class="step slide" data-x="10000" data-y="3100">
       <h2>Freitag, 09.10.2015</h2>
       <q>
         <b>Vortrag der Bibliothek</b>
@@ -304,7 +308,7 @@
       <img src="img/testpic.jpg" alt="test" width="900" />
     </div>
 -->
-    <div id="overview" class="step" data-x="5000" data-y="3500" data-scale="11.5">
+    <div id="overview" class="step" data-x="5000" data-y="4000" data-scale="12">
     </div>
   </div>
 
