--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=1024" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
-  <title>Vorstellung FSR ET 2015 | impress.js</title>
+  <title>Vorstellung FSR ET 2015</title>
 
   <meta name="description" content="Vorstellung des Fachschaftsrates Elektrotechnik 2015" />
   <meta name="author" content="Tino Steinmetz" />
