--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 -->
   <div id="impress">
     <!-- Titelseite -->
-    <div id="title" class="step title" data-x="5000" data-y="4000" data-scale="5">
+    <div id="title" class="step title" data-x="4500" data-y="4000" data-scale="5">
       <h1>Fachschaftsrat Elektrotechnik</h1>
       <p>
         Einführungswoche 2015
@@ -274,6 +274,30 @@
       </q>
     </div>
 
+    <div id="wohnsitzpraemie-logo" class="step img-slide" data-x="9000" data-y="5000" data-scale=3>
+      <img src="img/Wohnsitzpraemie.png" alt="Wohnsitzparmie" width="900" />
+    </div>
+
+    <div id="wohnsitzpraemie-punkte" class="step slide" data-x="9000" data-y="6500" data-scale=1>
+      <h2>Vorteile</h2>
+      <q>
+        <ol>
+          <li>Bei Ummeldung nach Rostock erhält jeder Studierende 150€ in Bar</li>
+          <li>50€ extra bei genügend Ummeldungen</li>
+          <li>Die Uni erhält dann ebenfalls zusätzliche Mittel</li>
+        </ol>
+      </q>
+    </div>
+
+    <div id="wohnsitzpraemie-wo" class="step slide" data-x="9000" data-y="7300" data-scale=1>
+      <h2>Wo kann ich mich ummelden?</h2>
+      <q>
+        <ul>
+          <li>In den Einwohnermeldeämtern in Rostock</li>
+          <li>Auf dem morgigen Campustag</li>
+        </ul>
+      </q>
+    </div>
     <!-- Tino's Fotokreisel -->
     <!--
     <div id="foto1" class="step img-slide" data-x="3000" data-y="3000">
