Einladung dem FSR beizutreten hinzugefügt

--- a/index.html
+++ b/index.html
@@ -134,10 +134,25 @@
       </q>
     </div>
 
-    <div id="fsr-foto" class="step img-slide" data-x="0" data-y="3000" data-scale=2>
+    <div id="fsr-foto" class="step img-slide" data-x="1000" data-y="2300" data-scale=1>
       <img src="img/Gruppenfoto_FSR_ET.jpg" alt="FSR bei Raumfeld" width="900" />
     </div>
 
+    <div id="fsr-mitmachen" class="step title" data-x="0" data-y="1100" data-z="6000" data-rotate="33" data-scale=3>
+      <h1>SEID DABEI!!!</h1>
+    </div>
+
+    <div id="fsr-vorteile" class="step slide" data-x="-1000" data-y="2300" data-scale=1>
+      <h2>Was habt ihr davon?</h2>
+      <q>
+        <ul>
+          <li>Das Unigeschehen aktiv mitgestalten</li>
+          <li>Fester Kontakt zu höheren Semestern</li>
+          <li>Positives Image bei den Dozenten</li>
+          <li>Freibier auf jeder Sitzung</li>
+        </ul>
+      </q>
+    </div>
     <!-- Mentoring -->
     <div id="mentoring" class="step title" data-x="0" data-y="5000" data-scale="3">
       <h1>Mentoring</h1>
