Raum für Campustag hinzugefügt

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
     <div id="ablaufplan-dienstag" class="step slide" data-x="9000" data-y="1500">
       <h2>Dienstag, 06.10.2015</h2>
       <q>
-        <b>Ab 9 Uhr:</b> zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR im Raum...
+        <b>Ab 9 Uhr:</b> zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR <b>(Haus 1 Raum 024)</b>
         <br/>
         <b>Ab 19 Uhr:</b> Livemusik auf dem Ulmencampus
       </q>
