--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <li>Start: 14:00 Uhr</li>
           <li>Treffpunkt: Albert-Einstein-Str. 2</li>
           <li>Kennenlernen der Räume und Standorte</li>
-          <li>Am Ziel erwarten euch tolle Preise</li>
+          <li>Wir erwarten euch dann am Ziel ;)</li>
         </ul>
       </q>
     </div>
@@ -313,7 +313,7 @@
         </ul>
       </q>
     </div>
-    
+
     <div id="overview" class="step" data-x="5000" data-y="4000" data-scale="12">
     </div>
   </div>
