--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
           <li>Elektrotechnik</li>
           <li>Informationstechnik/ Technische Informatik</li>
           <li>Computational Science an Engineering</li>
-          <li>Electical Engineering</li>
+          <li>Electrical Engineering</li>
         </ul>
       </q>
     </div>
