--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div id="title" class="step title" data-x="4500" data-y="4000" data-scale="5">
       <h1>Fachschaftsrat Elektrotechnik</h1>
       <p>
-        Einführungswoche 2015
+        Einführungswoche 2016
         <br /> Universität Rostock
         <br />
       </p>
@@ -218,27 +218,45 @@
       <h1>Ablauf der Erstie-Woche</h1>
     </div>
 
-    <div id="ablaufplan-montag" class="step slide" data-x="8000" data-y="1500">
+    <!-- <div id="ablaufplan-montag" class="step slide" data-x="8000" data-y="1500">
       <h2>Montag, 05.10.2015</h2>
       <q>
         <b>11:00 - 12:00 Uhr:</b> Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring
         <br/>
         <b>Danach:</b> gemeinsames Grillen mit dem Fachschaftsrat <b>(Freibier!!!)</b>
       </q>
-    </div>
+    </div> -->
 
-    <div id="ablaufplan-dienstag" class="step slide" data-x="9000" data-y="1500">
-      <h2>Dienstag, 06.10.2015</h2>
-      <q>
+    <div id="ablaufplan-dienstag-1" class="step slide multi" data-x="9000" data-y="1500">
+      <h2>Dienstag, 04.10.2015</h2>
+      <!--<q>
         <b>Ab 9:30 Uhr:</b> zentraler Campustag auf dem Ulmencampus, Beratung durch den FSR <b>(Haus 1 Raum 024)</b>
         <br/>
         <b>Ab 13 Uhr:</b> Livemusik auf dem Ulmencampus
+      </q>-->
+      <q>
+        <h2 align="center">Campustag</h2><br>
+      </q>
+    </div>
+    <div id="ablaufplan-dienstag-2" class="step slide multi" data-x="9000" data-y="1500">
+      <h2>Dienstag, 04.10.2015</h2>
+      <q>
+        <h2 align="center">Campustag</h2><br>
+        <h3 align="center">Wir hoffen ihr wart alle da ;D</h3><br>
+      </q>
+    </div>
+    <div id="ablaufplan-dienstag-3" class="step slide multi" data-x="9000" data-y="1500">
+      <h2>Dienstag, 04.10.2015</h2>
+      <q>
+        <h2 align="center">Campustag</h2><br>
+        <h3 align="center">Wir hoffen ihr wart alle da ;D</h3><br>
+        <h4 align="center">(Denn mehr bekommt ihr von eurem Semesterbeitrag vermutlich nicht mehr zu sehen)</h4>
       </q>
     </div>
 
     <div id="ablaufplan-mittwoch" class="step slide" data-x="10000" data-y="1500">
-      <h2>Mittwoch, 07.10.2015</h2>
-      <q>
+      <h2>Mittwoch, 05.10.2015</h2>
+      <!--<q>
         <b>Erstie-Rallye</b>
         <br/>
         <ul>
@@ -247,16 +265,21 @@
           <li>Kennenlernen der Räume und Standorte</li>
           <li>Wir erwarten euch dann am Ziel ;)</li>
         </ul>
+      </q> -->
+      <q>
+        <b>11:00 - 12:00 Uhr:</b> Begrüßung durch den Fachschaftsrat und Vorstellung des Mentoring
+        <br/>
+        <b>Danach:</b> gemeinsames Grillen mit dem Fachschaftsrat <b>(Freibier!!!)</b>
       </q>
     </div>
 
     <div id="ablaufplan-donnerstag-mentoring" class="step slide multi" data-x="10000" data-y="2300">
-      <h2>Donnerstag, 08.10.2015</h2>
+      <h2>Donnerstag, 06.10.2015</h2>
       <q>
         <b>Erstes Mentoring-Treffen</b>
         <br/>
         <ul>
-          <li>14:00 Uhr</li>
+          <li>15:00 Uhr</li>
           <li>Treffpunkt: Albert-Einstein-Str. 2</li>
           <li>Raum: Ex04</li>
         </ul>
@@ -264,7 +287,7 @@
     </div>
 
     <div id="ablaufplan-donnerstag-kneipentour" class="step slide multi" data-x="10000" data-y="2300">
-      <h2>Donnerstag, 08.10.2015</h2>
+      <h2>Donnerstag, 06.10.2015</h2>
       <q>
         <b>Kneipentour durch Rostock</b>
         <br/>
@@ -277,7 +300,7 @@
     </div>
 
     <div id="ablaufplan-freitag" class="step slide" data-x="10000" data-y="3100">
-      <h2>Freitag, 09.10.2015</h2>
+      <h2>Freitag, 07.10.2015</h2>
       <q>
         <b>Vortrag der Bibliothek</b>
         <br/>
